// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General testing DropDown component Testing opened dropdown popUp 1`] = `
<div
  class="DropDown"
>
  <div
    style="display: flex; align-items: center;"
  >
    <img
      alt="Arrow top"
      height="6"
      src=""
      width="10"
    />
     
    <span
      class="Label"
    >
      Сортировка по:
    </span>
     
    <button
      class="Btn"
    >
      
        популярности
      
    </button>
  </div>
   
  <div
    class="PopUp"
  >
    <ul
      class="List"
    >
      <li
        class="ItemActive Item"
      >
        
          популярности
        
      </li>
      <li
        class="Item"
      >
        
          по цене
        
      </li>
      <li
        class="Item"
      >
        
          по алфавиту
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`General testing DropDown component Testing render dropdown component 1`] = `
<div
  class="DropDown"
>
  <div
    style="display: flex; align-items: center;"
  >
    <img
      alt="Arrow top"
      height="6"
      src=""
      width="10"
    />
     
    <span
      class="Label"
    >
      Сортировка по:
    </span>
     
    <button
      class="Btn"
    >
      
        популярности
      
    </button>
  </div>
   
  <!---->
</div>
`;
